# ElevatorSimulation

./: CMakeLists.txt  README.md  main.cpp
Headers/: ElevatorSimulation.h  ElevatorSimulationDefinition.h  IO.h  Passenger.h  Queue.h  Stack.h
Sources/: ElevatorSimulation.cpp  IO.cpp  Passenger.cpp  Queue.cpp  Stack.cpp
